@@ -884,7 +884,13 @@ There is NO WARRANTY, to the extent permitted by law.\n"),
   if (!reading_from_stdin)
     {
       while (optind != argc)
-        convert_from_file (argv[optind++]);
+        {
+          if (STREQ (argv[optind], "-"))
+            convert_from_stream (stdin, "stdin");
+          else
+            convert_from_file (argv[optind]);
+          optind++;
+        }
     }
   else
     convert_from_stream (stdin, "stdin");
@@ -1342,7 +1348,7 @@ convert_from_stream (FILE *stream, char *name)
 
   /* Read until the end of the stream.  This isn't strictly correct, since
      the texinfo input may end before the stream ends, but it is a quick
-     working hueristic. */
+     working heuristic. */
   while (!feof (stream))
     {
       int count;
